# Rain

./: .gitattributes  Makefile  README.md  index.html  package.json  tsconfig.json  vite.config.ts
src/: App.svelte  app.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio.rs  files.rs  main.rs  tasks.rs  timer.rs
src/lib/: events.ts  type.ts
src/lib/components/: dashboard.svelte  sidebar.svelte  taskcard.svelte  tasklist.svelte  timer.svelte
src/lib/sidebar/: sidebar.svelte
src/lib/slots/: icon.svelte
src/lib/stores/: timer.ts
src/lib/tasklist/: taskcard.svelte  tasklist.svelte
