[package]
name = "rain"
version = "0.1.0"
description = "A tasklist app"
authors = ["iff"]
license = ""
repository = ""
default-run = "rain"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all"] }
uuid = { version = "1.1.2", features = [ "v4", "fast-rng", "macro-diagnostics", ] }
once_cell = "1.15.0"
rodio = "0.16.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
